fix default border radius on ios

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -400,6 +400,7 @@ $lists-max-width: 700px;
 
           .search {
             border: none;
+            border-radius: 0;
             padding: .25rem .5rem;
             font-size: .8rem;
             width: 4rem;
